# digital-circuit-simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: circuit.cpp  circuit.hpp  console.cpp  console.hpp  gates.hpp  help.hpp
